# better-auth-rs

./: CLAUDE.md  Cargo.toml  README.md  README_CN.md  better-auth.yaml
docs/: POSTGRESQL_GUIDE.md
examples/: axum_server.rs  basic_usage.rs  postgres_usage.rs
migrations/: 001_initial.sql  README.md
src/: error.rs  lib.rs  types.rs
src/adapters/: database.rs  mod.rs
src/core/: auth.rs  mod.rs  plugin.rs  session.rs
src/handlers/: axum.rs  mod.rs
src/plugins/: email_password.rs  email_verification.rs  mod.rs  oauth.rs  password_management.rs  session_management.rs  two_factor.rs
tests/: axum_integration_tests.rs  integration_tests.rs
