[package]
name = "better-auth"
version = "0.0.1-alpha.1"
edition = "2024"
license = "MIT"
description = "The most comprehensive authentication framework for Rust"
repository = "https://github.com/AprilNEA/better-auth-rs"

[lib]
name = "better_auth"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Cryptography
sha2 = "0.10"
rand = "0.8"
jsonwebtoken = "9.0"
argon2 = "0.5"
base64 = "0.22"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP related (optional features)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }
url = "2.4"

# Database adapters (optional features)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"], optional = true }

# Cache adapters (optional features)
redis = { version = "0.24", optional = true }

[features]
default = []
axum = ["dep:axum", "dep:tower", "dep:tower-http"]
sqlx-postgres = ["dep:sqlx"]
redis-cache = ["dep:redis"]

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "postgres_usage"
path = "examples/postgres_usage.rs"
required-features = ["sqlx-postgres"]

[[example]]
name = "axum_server"
path = "examples/axum_server.rs"
required-features = ["axum"]
